crates/edifact-rs-derive/tests/ui/fail_message_field_element_position.stderr
error: field `bgm`: element/component positioning is only valid on segment structs
  --> tests/ui/fail_message_field_element_position.rs:26:15
   |
26 |     #[edifact(element = 0)]
   |               ^^^^^^^
